--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "Nicolas Thouchkaieff <nico.thouch94@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "start": "ts-node ./src/app.ts",
     "build": "tsc",
-    "start": "node ./bin/app.js",
-    "dev": "ts-node ./src/app.ts"
+    "start-build": "node ./bin/app.js"
   },
   "dependencies": {
     "colors": "^1.4.0",
